fix for 0000352: Dev13 - Marketplace - spacing between filters [https://mantis2.uat.melistechnology.fr/view.php?id=352]

--- a/public/css/melis-market-place.css
+++ b/public/css/melis-market-place.css
@@ -1519,3 +1519,8 @@
 .melis-marketplace-product-action:hover .fa-download {
     color: #fff !important;
 }
+
+div[class*=col-md-].no-bt-gutters {
+    padding-right: 0;
+    padding-left: 0;
+}
